--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,11 @@
   color: #fcfcfd;
 }
 
+body {
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif;
+}
+
 .material-symbols-outlined {
   user-select: none;
 }
