--- a/src/components/dashboard/PostRoll/styles.module.scss
+++ b/src/components/dashboard/PostRoll/styles.module.scss
@@ -1,16 +1,17 @@
 .postRoll {
   width: 610px;
+  height: 100%;
 
   .post {
     background: #050030;
-    height: 233px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-bottom: 1px solid #b0a8c8;
 
     .headerPost {
       background: #12003d;
-      height: 21%;
+      height: 55px;
       display: flex;
       flex-wrap: nowrap;
       align-items: center;
@@ -52,23 +53,42 @@
     }
 
     .mainPost {
+      img {
+        max-width: 233px;
+        max-height: 233px;
+        width: auto;
+        height: auto;
+      }
     }
 
     .footerPost {
       background: #0b0036;
-      height: 34px;
+      height: 89px;
       display: flex;
       justify-content: space-between;
       align-items: center;
 
-      h1 {
-        font-size: 1rem;
-        line-height: 13px;
-        background-color: #2980b9;
-        padding: 5px;
-        border-radius: 5px;
-        font-weight: 700;
-        margin-left: 8px;
+      .subjectAndChecked {
+        display: flex;
+        flex-direction: row;
+
+        h1 {
+          font-size: 1rem;
+          line-height: 13px;
+          background-color: #2980b9;
+          padding: 5px;
+          border-radius: 5px;
+          font-weight: 700;
+          margin-left: 8px;
+        }
+
+        span {
+          background: #2ecc71;
+          margin: 0 3px;
+          font-size: 21px;
+          line-height: 21px;
+          border-radius: 13px;
+        }
       }
 
       .commentBox {
@@ -80,6 +100,7 @@
 
         span {
           font-size: 13px;
+          background: transparent;
           color: #b0a8c8;
           line-height: 13px;
         }
