--- a/src/styles/Dashboard.module.scss
+++ b/src/styles/Dashboard.module.scss
@@ -1,12 +1,12 @@
 .root {
   color: #fcfcfd;
   display: flex;
-  height: 100vh;
   flex-wrap: wrap;
 
   .main {
     display: flex;
     flex-wrap: nowrap;
     width: 100%;
+    height: 100%;
   }
 }
