--- a/src/components/dashboard/PostRoll/styles.module.scss
+++ b/src/components/dashboard/PostRoll/styles.module.scss
@@ -53,16 +53,30 @@
     }
 
     .mainPost {
+      background: #12003d;
+
+      p {
+        height: 34px;
+        width: 89%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        color: #b0a8c8;
+        font-size: 13px;
+        line-height: 17px;
+        margin: 3px 13px;
+      }
+
       img {
-        max-width: 233px;
-        max-height: 233px;
-        width: auto;
-        height: auto;
+        width: 233px;
+        height: 144px;
+        overflow: hidden;
+        margin: 3px 13px;
       }
     }
 
     .footerPost {
-      background: #0b0036;
+      background: #12003d;
       height: 89px;
       display: flex;
       justify-content: space-between;
@@ -79,7 +93,7 @@
           padding: 5px;
           border-radius: 5px;
           font-weight: 700;
-          margin-left: 8px;
+          margin-left: 13px;
         }
 
         span {
