--- a/src/components/dashboard/UserData/styles.module.scss
+++ b/src/components/dashboard/UserData/styles.module.scss
@@ -97,6 +97,7 @@
   .mainUserData {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 
     .absence {
       background: #2980b9;
@@ -107,7 +108,7 @@
       align-items: center;
       justify-content: center;
       flex-direction: column;
-      margin: 21px;
+      margin: 21px auto;
 
       h1 {
         font-weight: 700;
@@ -132,7 +133,7 @@
       align-items: center;
       justify-content: center;
       flex-direction: column;
-      margin: 21px;
+      margin: 21px auto;
 
       h1 {
         font-weight: 700;
@@ -157,7 +158,7 @@
       align-items: center;
       justify-content: center;
       flex-direction: column;
-      margin: 21px;
+      margin: 21px auto;
 
       h1 {
         font-weight: 700;
@@ -172,5 +173,15 @@
         line-height: 21px;
       }
     }
+  }
+}
+
+@media (max-width: 768px) {
+  .userData {
+    order: 2;
+    height: calc(100vh - 89px);
+    width: calc(100vw - 55px);
+    position: relative;
+    top: 0;
   }
 }
