--- a/src/styles/Dashboard.module.scss
+++ b/src/styles/Dashboard.module.scss
@@ -1,21 +1,14 @@
+$primary: #0277bd;
+$primary-light: #58a5f0;
+$primary-dark: #004c8c;
+$secondary: #1a237e;
+$secondary-light: #534bae;
+$secondary-dark: #000051;
+$text: #ffffff;
+
 .root {
   color: #fcfcfd;
   display: flex;
   flex-wrap: wrap;
-
-  .main {
-    display: flex;
-    overflow: hidden;
-    flex-wrap: nowrap;
-    width: 100%;
-    height: 100%;
-  }
-
-  @media (max-width: 768px) {
-    .main {
-      flex-wrap: wrap;
-      justify-content: flex-start;
-      align-items: flex-start;
-    }
-  }
+  flex-direction: column;
 }
