--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,7 +1,15 @@
+$primary: #0277bd;
+$primary-light: #58a5f0;
+$primary-dark: #004c8c;
+$secondary: #1a237e;
+$secondary-light: #534bae;
+$secondary-dark: #000051;
+$text: #ffffff;
+
 .container1 {
   padding: 0 2rem;
   background: url(../public/books.jpg) no-repeat;
-  background-color: #7A86B6;
+  background-color: #7a86b6;
   background-size: cover;
   height: 100vh;
 
@@ -26,11 +34,11 @@
         margin: 5px;
         padding: 8px;
         font-weight: bold;
-        transition: 0.15s ease
+        transition: 0.15s ease;
       }
 
       a:hover {
-        color: #C8B6E2;
+        color: #c8b6e2;
       }
     }
   }
@@ -57,11 +65,11 @@
       text-decoration: underline;
       padding: 8px;
       font-weight: bold;
-      transition: 0.15s ease
+      transition: 0.15s ease;
     }
 
     a:hover {
-      color: #C8B6E2;
+      color: #c8b6e2;
     }
 
     p {
@@ -79,7 +87,7 @@
   padding: 0 2rem;
   background: black;
   height: 100vh;
-  
+
   div {
     display: flex;
     align-items: center;
@@ -105,7 +113,7 @@
         font-size: 1.5rem;
         font-weight: 600;
       }
-      
+
       p {
         margin: 0;
         font-size: 1.25rem;
